jsapi-util: Also rate limit checking the process size

Querying /proc/self/stat has quite an overhead which e.g. can be seen
when draging a window. Before this patch the GC was already rate
limited to only run every 5 frames. This also lowers the rate of
checking whether the GC should be run to be lower.

This change may delay a GC run a bit. However the maximum delay is
equivalent to the previous rate limiting.

https://bugzilla.gnome.org/show_bug.cgi?id=786017